--- a/src/scss/block/communication.scss
+++ b/src/scss/block/communication.scss
@@ -65,6 +65,7 @@
 				left: 0;
 				width: 3px;
 				height: 3px;
+				border-radius: 50%;
 				background: $mainColor;
 			}
 			&:not(:last-child){
